# lab-1

./: .gitignore  .ocamlinit  Readme.md  Scoring.md  dune-project  lab1.opam
lib/: arithmetic.ml  arithmetic.mli  combinator.ml  combinator.mli  dune  fresh.ml  fresh.mli  lambda.ml  lambda.mli
test/: dune
